--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg text-light bgimg">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,12 +13,12 @@
                     <p class="m-0">Nome do usuário</p>
                 </li>
                 <li class="nav-item ps-2 ftespecial tamanhofnt d-flex align-items-center ">
-                    <a href="" class="links"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                    <a href="" class="links text-light"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item ps-2 ftespecial tamanhofnt d-flex align-items-center ">
-                    <a href="" class="links"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                    <a href="" class="links text-light"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </div>
