--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -56,7 +56,7 @@
                     </div>
                     
                     <div class="d-flex justify-content-center mt-4 ftcorpo">
-                        <button type="submit" class="btn btn-danger">Cancelar</button>
+                        <button type="submit" class="btn btn-danger"><a routerLink='/login'> Cancelar</a></button>
                         <button type="submit" class="btn btn-success ms-3">Cadastrar</button>
                     </div>
 
