--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -22,8 +22,8 @@
             </div>
         </div>
     </div>
-    <div class="footer-copyright py-3 ftespecial d-flex justify-content-center bg-dark">
+    <div class="footer-copyright py-3 ftespecial d-flex justify-content-center bgimg">
         <span class="text-light"> &copy; 2021: </span>
-        <a href="https://github.com/mariaadelia" target="_blank" class="corhover"> Maria Adélia de Campos</a>
+        <a href="https://github.com/mariaadelia/blogPessoalFrontEnd" target="_blank" class="corhover"> Maria Adélia de Campos</a>
     </div>
 </footer>
