--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -13,42 +13,42 @@
                     <!--Formulario-->
                     <div class="form-group ftcorpo">
                         <label class = "mb-2" for="nome">Nome</label>
-                        <input type="text" class="form-control mb-3" id="nome" name="nome" placeholder="Seu nome">
+                        <input [(ngModel)]='usuario.nome' type="text" class="form-control mb-3" id="nome" name="nome" placeholder="Seu nome">
                     </div>
 
                     <div class="form-group ftcorpo">
                         <label class = "mb-2" for="usuario">Usuário</label>
-                        <input type="text" class="form-control mb-3" id="usuario" name="usuario" placeholder="Seu usuário">
+                        <input [(ngModel)]='usuario.usuario'type="text" class="form-control mb-3" id="usuario" name="usuario" placeholder="Seu usuário">
                     </div>
 
                     <div class="form-group ftcorpo">
                         <label class = "mb-2" for="foto">Link da foto</label>
-                        <input type="text" class="form-control mb-3" id="foto" name="foto" placeholder="Link da sua foto de perfil">
+                        <input [(ngModel)]='usuario.foto'type="text" class="form-control mb-3" id="foto" name="foto" placeholder="Link da sua foto de perfil">
                     </div>
 
                     <div class="form-group ftcorpo">
                         <label class = "mb-2" for="email">Email</label>
-                        <input type="email" class="form-control mb-3" id="email" name="email" placeholder="Seu email">
+                        <input [(ngModel)]='usuario.email' type="email" class="form-control mb-3" id="email" name="email" placeholder="Seu email">
                     </div>
 
                     <div class="form-group ftcorpo">
                         <label class = "mb-2" for="data-nascimento">Data de Nascimento</label>
-                        <input type="date" class="form-control mb-3" id="data-nascimento" name="data-nascimento" placeholder="Sua data de nascimento">
+                        <input [(ngModel)]='usuario.dataAniversario' type="date" class="form-control mb-3" id="data-nascimento" name="data-nascimento" placeholder="Sua data de nascimento">
                     </div>
 
                     <div class="form-group ftcorpo">
                         <label class = "mb-2" for="senha">Senha</label>
-                        <input type="password" class="form-control  mb-3" id="senha" name="senha" placeholder="Sua senha">
+                        <input (change)='confirmarSenha($event)' type="password" class="form-control  mb-3" id="senha" name="senha" placeholder="Sua senha">
                     </div>
 
                     <div class="form-group ftcorpo">
                         <label class = "mb-2" for="confSenha">Confirmar senha</label>
-                        <input type="password" class="form-control  mb-3" id="confSenha" name="confSenha" placeholder="Confirme sua senha">
+                        <input [(ngModel)]='usuario.senha' type="password" class="form-control  mb-3" id="confSenha" name="confSenha" placeholder="Confirme sua senha">
                     </div>
 
                     <div class="form-group ftcorpo">
                         <label for="tipo">Tipo de Usuário</label>
-                        <select class="form-control ftcorpo" name="tipo" id="tipo">
+                        <select (change)='tipoUser($event)' class="form-control ftcorpo" name="tipo" id="tipo">
                             <option> Selecione o tipo de usuário</option> <!--Vai funcionar como o place holder aqui-->
                             <option value="normal">Normal</option>
                             <option value="admin">Administrador</option>
@@ -57,7 +57,7 @@
                     
                     <div class="d-flex justify-content-center mt-4 ftcorpo">
                         <button type="submit" class="btn btn-danger"><a routerLink='/login'> Cancelar</a></button>
-                        <button type="submit" class="btn btn-success ms-3">Cadastrar</button>
+                        <button type="submit" class="btn btn-success ms-3" (click)='cadastrar()' >Cadastrar</button>
                     </div>
 
                     <hr class="mt-5 mb-5">
