--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,17 +8,18 @@
                 <div class="col-md-6">
                     <h1 class="fttitulo text-center mt-3 mb-3">Login</h1>
                     
+
                     <!--Formulario-->
                     <div class="form-group ftcorpo">
                         <label class = "mb-2" for="usuario">Usuário</label>
-                        <input type="text" class="form-control mb-3" id="usuario" name="usuario" placeholder="Seu usuário">
+                        <input [(ngModel)]='usuarioLogin.usuario' type="text" class="form-control mb-3" id="usuario" name="usuario" placeholder="Seu usuário">
                     </div>
                     <div class="form-group ftcorpo">
                         <label class = "mb-2" for="senha">Senha</label>
-                        <input type="password" class="form-control  mb-3" id="senha" name="senha" placeholder="Sua senha">
+                        <input [(ngModel)]='usuarioLogin.senha' type="password" class="form-control  mb-3" id="senha" name="senha" placeholder="Sua senha">
                     </div>
                     <div class="d-flex justify-content-center mt-4 ftcorpo">
-                        <button type="submit" class="btn btn-success">Entrar</button>
+                        <button type="submit" class="btn btn-success" (click)='entrar()'>Entrar</button>
                     </div>
                     <hr class="mt-5 mb-5">
 
