--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -38,7 +38,7 @@
 
                     <div class="form-group ftcorpo">
                         <label class = "mb-2" for="senha">Senha</label>
-                        <input (change)='confirmarSenha($event)' type="password" class="form-control  mb-3" id="senha" name="senha" placeholder="Sua senha">
+                        <input (input)='confirmarSenha($event)' type="password" class="form-control  mb-3" id="senha" name="senha" placeholder="Sua senha">
                     </div>
 
                     <div class="form-group ftcorpo">
