--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,101 @@
-<p>inicio works!</p>
+<div class="container-fluid">
+
+    <div class="row d-flex align-items-center">
+        <div class="col-6">
+
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-6 text-center">
+                    <h1 class="ftespecial titulo">Seja bem-vinde!</h1>
+                    <h5 class="fttxt texto"> O que você está pensando?</h5>
+                </div>
+            </div>
+
+            <!--Botões para fazer uma nova postagem e para direcionar na página onde está as postagens já feitas-->
+            <div class="row d-flex justify-content-center ftespecial mt-3 mb-5 text-center">
+                <div class="col-md-6">
+                    <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#novaPostagem"
+                    data-bs-whatever="@mdo">Nova postagem</button>
+                    <a class="btn btn-outline-dark ms-3" href="#postagens">Ver postagens</a>
+                </div>
+            </div>
+
+        </div>
+
+        <!--Imagem-->
+        <div class="col-md-6 d-flex justify-content-center">
+            <img src="https://i.imgur.com/j7iFptq.png" alt="Ilustração de uma mulher escrevendo" width="600 px"
+                height="600 px">
+        </div>
+    </div>
+
+</div>
+
+<!--Menu de navegação das postagens (PROBLEMA - toda vez que eu clico, ela sai da pg (no caso de minhas postagens e postagens Tema))-->
+<div class="container mb-5 mt-5" id="postagens">
+    <nav>
+        <div class="nav nav-tabs d-flex justify-content-center fttxt" id="nav-tab" role="tablist">
+
+            <a class="nav-item nav-link active text-secondary" id="nav-todasPostagens-tab" data-toggle="tab"
+                href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as
+                Postagens</a>
+
+            <a class="nav-item nav-link" id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens"
+                role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas Postagens</a>
+
+            <a class="nav-item nav-link" id="nav-postagensTema-tab" data-toggle="tab" href="#postagensTema" role="tab"
+                aria-controls="nav-postagensTema" aria-selected="false">Postagens por Temas</a>
+        </div>
+    </nav>
+    <div class="tab-content" id="nav-tabContent">
+
+        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel"
+            aria-labelledby="nav-todasPostagens-tab">
+            Todas as Postagens
+        </div>
+
+        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
+            Minhas Postagens
+        </div>
+
+        <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="nav-postagensTema-tab">
+            Postagens por tema
+        </div>
+    </div>
+
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="novaPostagem" tabindex="-1"
+    aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nova Postagem</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="titulo" class="col-form-label">Título</label>
+                        <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+                    </div>
+                    <div class="mb-3">
+                        <label for="texto" class="col-form-label">Texto</label>
+                        <textarea name="texto" class="form-control" id="texto" rows="3"></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="tema" class="col-form-label">Escolha um tema ou <a href=""> cadastre um novo</a>:</label>
+                        <select name="tema" id="tema" class="form-control">
+                            <option value="">Temas</option>
+                        </select>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-success">Publicar</button>
+            </div>
+        </div>
+    </div>
+</div>
