--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <img src="https://i.imgur.com/bSTiY1n.jpg" alt="Foto do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
+                    <img src="{{foto}}" alt="Foto do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
                 </li>
                 <li class="nav-item d-flex align-items-center ps-3 ftespecial tamanhofnt">
-                    <p class="m-0">Nome do usuário</p>
+                    <p class="m-0">Olá, {{nome}}</p>
                 </li>
                 <li class="nav-item ps-2 ftespecial tamanhofnt d-flex align-items-center ">
                     <a href="" class="links text-light"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
@@ -18,7 +18,7 @@
             </ul>
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item ps-2 ftespecial tamanhofnt d-flex align-items-center ">
-                    <a href="" class="links text-light"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                    <a (click) = 'sair()' class="links text-light"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </div>
