Adicionando o componente tema

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -85,7 +85,7 @@
                         <textarea name="texto" class="form-control" id="texto" rows="3"></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="tema" class="col-form-label">Escolha um tema ou <a href=""> cadastre um novo</a>:</label>
+                        <label for="tema" class="col-form-label">Escolha um tema ou <a data-bs-dismiss="modal" routerLink='/tema'> cadastre um novo</a>:</label>
                         <select name="tema" id="tema" class="form-control">
                             <option value="">Temas</option>
                         </select>
