--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,21 @@
 html{
     scroll-behavior: smooth;
 }
+
+@font-face {
+    font-family: SukhumvitBold;
+    src: url(src/assets/Fonte/SukhumvitSet-Bold.ttf);
+}
+
+@font-face {
+    font-family: Sukhumvit;
+    src: url(src/assets/Fonte/SukhumvitSet-Light.ttf);
+}
+
+.fttxt{
+    font-family: Sukhumvit;
+}
+
+.ftespecial{
+    font-family: SukhumvitBold;
+}
