Post e Get do Tema

--- a/src/app/tema/tema.component.css
+++ b/src/app/tema/tema.component.css
@@ -1,5 +1,5 @@
 .bg{
-    background-image: url(https://i.imgur.com/3KtvRPF.jpg);
+    background-image: url(https://i.imgur.com/dDQkdji.jpg);
 }
 
 .ftsize{
