--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -1,10 +1,10 @@
-<div class="container-fluid mt-5">
+<div class="container-fluid bg mt-5">
     <div class="row">
-        <div class="col-md-12 bg">
+        <div class="col-md-12">
 
 
             <!--Link para voltar para o início-->
-            <a roterLink='/inicio' class="ftespecial">
+            <a routerLink='/inicio' class="ftespecial"> inicio
                 <i class="fa fa-home" aria-hidden="true" class="text-dark"></i>
             </a>
 
@@ -15,10 +15,10 @@
             <div class="row d-flex justify-content-center mt-4 mb-5">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
+                        <input [(ngModel)] = 'tema.tema' type="text" class="form-control" id="descricao" placeholder="Digite o tema">
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-dark mt-2">Cadastrar</button>
+                        <button class="btn btn-dark mt-2" (click) = 'cadastrar()' >Cadastrar</button>
                     </div>
                 </div>
             </div>
@@ -39,28 +39,18 @@
                     <thead>
                         <tr>
                             <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col">Tema</th>
+                            <th scope="col" class="text-end">Modificações</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
+                        <tr *ngFor = 'let tema of listaTemas'>
+                            <th>{{tema.id}}</th>
+                            <td>{{tema.tema}}</td>
+                            <td class="d-flex justify-content-end">
+                                <button class="btn btn-info" >Editar</button>
+                                <button class="btn btn-danger ms-3" >Apagar</button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
