Atualizando a página de temas

--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -43,7 +43,7 @@
                             <th scope="col" class="text-end">Modificações</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody> <!--Mudando o Id e o nome do tema-->
                         <tr *ngFor = 'let tema of listaTemas'>
                             <th>{{tema.id}}</th>
                             <td>{{tema.tema}}</td>
