--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -48,8 +48,8 @@
                             <th>{{tema.id}}</th>
                             <td>{{tema.tema}}</td>
                             <td class="d-flex justify-content-end">
-                                <button class="btn btn-info" >Editar</button>
-                                <button class="btn btn-danger ms-3" >Apagar</button>
+                                <button class="btn btn-info" [routerLink] = "['/tema-edit', tema.id]" >Editar</button>
+                                <button class="btn btn-danger ms-3" [routerLink] = "['/tema-delete', tema.id]" >Apagar</button>
                             </td>
                         </tr>
                     </tbody>
