--- a/src/app/edit/postagem-edit/postagem-edit.component.html
+++ b/src/app/edit/postagem-edit/postagem-edit.component.html
@@ -27,7 +27,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal" routerLink = '/inicio'>Cancelar</button>
             <button type="button" class="btn btn-success" (click)='atualizar()'
                 data-bs-dismiss="modal">Publicar</button>
         </div>
